      the R-devel mailing list.

      \item \code{as.Date.POSIXlt(x)} now also works when the list components
      are of unequal length, aka \dQuote{partially filled} or \dQuote{ragged}.

      \item \code{expand.model.frame()} looked up variables in the wrong
      environment when applied to models fitted without \code{data}.
      Reported in \PR{18414}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{tools::Rdiff(useDiff = TRUE)} checks for the presence
      of an external \command{diff} command and switches to
      \code{useDiff = FALSE} if none is found.
      This allows \command{R CMD Rdiff} to always work.

      \item On Windows, environment variable
      \env{R_LIBCURL_SSL_REVOKE_BEST_EFFORT} can be used to switch to
      only \sQuote{best-effort} SSL certificate revocation checks with
      the default \code{"libcurl"} download method.  This reduces
      security, but may be needed for downloads to work with MITM
      proxies (\PR{18379}).

      \item (macOS) The run-time check for libraries from XQuartz for
      X11 and Tcl/Tk no longer uses \code{otool} from the Apple
      Developer Tools (PR#18400).

      \item The \LaTeX style for producing the PDF manuals, \file{Rd.sty},
      now loads the standard \samp{amsmath}, \samp{amsfonts} and
      \samp{amssymb} packages for greater coverage of math commands in
      the Rd \verb{\eqn} and \verb{\deqn} macros.
      The \verb{\mathscr} \LaTeX command is also provided (via the
      \samp{mathrsfs} package, if available, or the \samp{amsfonts}
      bundle otherwise), fulfilling the wish of \PR{18398}.

      \item \code{.Machine} has a new element \code{sizeof.time_t} to
      identify old systems with a 32-bit type and hence a limited range
      of date-times (and limited support for dates millions of years
      from present).

      \item (Windows) The default format of \code{readClipboard()} and